# apps/api/internal/sqlc/models.go
@@ -1,0 +1,34 @@
+// Code generated by sqlc. DO NOT EDIT.
+// versions:
+//   sqlc v1.30.0
+
+package sqlc
+
+import (
+	"time"
+)
+
+type Link struct {
+	ID            string     `json:"id"`
+	WorkspaceID   string     `json:"workspace_id"`
+	ShortCode     string     `json:"short_code"`
+	DestUrl       string     `json:"dest_url"`
+	Title         *string    `json:"title"`
+	Description   *string    `json:"description"`
+	IsActive      bool       `json:"is_active"`
+	ExpiresAt     *time.Time `json:"expires_at"`
+	ClickCount    int64      `json:"click_count"`
+	LastClickedAt *time.Time `json:"last_clicked_at"`
+	DeletedAt     *time.Time `json:"deleted_at"`
+	CreatedAt     time.Time  `json:"created_at"`
+	UpdatedAt     time.Time  `json:"updated_at"`
+}
+
+type Workspace struct {
+	ID        string     `json:"id"`
+	Name      string     `json:"name"`
+	Slug      string     `json:"slug"`
+	DeletedAt *time.Time `json:"deleted_at"`
+	CreatedAt time.Time  `json:"created_at"`
+	UpdatedAt time.Time  `json:"updated_at"`
+}
